# python-mcp-server-template

./: .coveragerc  .env.development  .env.production  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_LOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_PERSONA.md  COMMIT_INSTRUCTIONS.md  CONTRIBUTING.md  DR_CHEN_FINAL_ASSESSMENT.md  DR_CHEN_FINAL_STATUS_REPORT.md  Dockerfile  Dockerfile.alternative  Dockerfile.fixed  LICENSE  README.md  README_OLD.md  SECURITY.md  bandit-report.json  bandit-summary.md  benchmark.py  build-it.sh  build.bat  build.sh  commit_black_fixes.bat  commit_black_fixes.sh  commit_changes.py  commit_fixes.sh  config.example.yaml  config.py  debug-container.sh  docker-compose.yml  examples.py  final-check.sh  manual_test_1.sh  mcp_server.py  mcp_server_official.py  (+20 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: pages.yml  python-ci.yml  python-quality.yml
docs/: README.md  _config.yml  index.md
docs/_includes/: hero.html
docs/api/: overview.md
docs/assets/css/: custom.css
docs/deployment/: docker.md  quickstart.md
docs/development/: setup.md
docs/security/: overview.md
mcp_server/: __init__.py  __main__.py  server.py
tests/: conftest.py  old_test.py  test_coverage_completion.py  test_mcp_server.py  test_mcp_server_functions.py  test_missing_coverage.py  test_server.py
tests/functional/: __init__.py  test_server.py
tests/integration/: test_api.py
tests/unit/: __init__.py  test_tools.py
